# tmp

cpp/: CMakeLists.txt
cpp/include/map_composer/: map_composer.hpp
cpp/src/: main.cpp  map_composer.cpp
data/csv/L/: map1.csv  map2.csv  map3.csv
data/csv/circle/: map1.csv  map2.csv  map3.csv
data/pcd/L/: map1.pcd  map2.pcd  map3.pcd
data/pcd/circle/: map1.pcd  map2.pcd  map3.pcd
doc/: ALGORITHM_DESIGN.md  map_composer_cpp_design.md  map_composer_cpp_test_results.md  map_composer_requirement.md  map_composer_to_ROS_input.md  validation.md  validation_cpp.md
scripts/: estimate_and_plot.py  plot_pcd_overlay.py  test_type_detection.py  visualize_features.py
src/map_composer/: __init__.py  clustering.py  features.py  io.py  matching.py  transforms.py  type_detection.py
